[package]
name = "torio"
description = "The Package Manager for Thrush Programming Language."
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"
rust-version = "1.85.0"

authors = [
    "Thrush Team <thrushlangproject@gmail.com>",
    "Stevens Benavides <foss.stevens.benavides@gmail.com>"
]

homepage = "https://github.com/thrushlang/torio"
repository = "https://github.com/thrushlang/torio"

[dependencies]
toml = "0.8.22"
colored = "3.0.0"
lazy_static = "1.5.0"
zenity = "3.6.1"
isahc = "1.7.2"

[profile.dev]
incremental = true

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = true
incremental = true
